@@ -1,3 +1,15 @@
+2011-01-07  Michael Snyder  <msnyder@vmware.com>
+
+	* ax-gdb.c: Adjust some long output strings.
+	* breakpoint.c: Ditto.
+	* charset.c: Ditto.
+	* cp-abi.c: Ditto.
+	* infcall.c: Ditto.
+	* infrun.c: Ditto.
+	* linux-nat.c: Ditto.
+	* solib-pa64.c: Ditto.
+	* solib-som.c: Ditto.
+
 2011-01-06  Tom Tromey  <tromey@redhat.com>
 
 	PR python/12367:
